ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
05/02/10 Oleh Derevenko
		* dGeomLowLevelControl function added with ability to change/query OPCODE 
		  trimesh-sphere contact merging behavior at runtime.

02/18/10 Daniel K. O.
        * Fixed bug affecting disabled joints and dWorldStep.

01/16/10 Oleh Derevenko
		* Patch applied (#2931174) to make demos work for recent MacOS.
		* Patch applied (#2931177) to fix the demos' framerate on X11.

12/20/09 Oleh Derevenko
		* QuadTreeSpace implementation corrected to avoid object-block relation 
		  ambiguity due to numeric errors.

12/04/09 Oleh Derevenko
		* odecpp classes changed to be inheritable and easily expandable

11/29/09 Oleh Derevenko
		* Improvement for trimesh-plane collision (also used in trimesh-heightfield)
		  to exclude mesh vertices that have already generated contacts from further
		  examination and contact generation in other triangles (suggested by LR).

10/25/09 Oleh Derevenko
		* Macros changed to static inline functions in odemath.h and related files.
		  Some code duplication has been eliminated across the files.

		* Fixed handling of --disable-asserts and --enable-double-precision 
		  (absence of --enable-double-precision) in configure script. The script
		  was not appending compiler defines correctly.

		* dWorldStep implementation changed to remove allocation on stack. 
		  dUSE_MALLOC_FOR_ALLOCA define has been removed as well as corresponding
		  configuration parameter. Also dMemoryFlag public variable has been removed.
		  (look for presence of ODE_EXT_malloc_not_alloca configuration string if
		  your application is dependent on that variable).

09/05/09 Oleh Derevenko